Grid ejercicio con resposividad teriminado :D

--- a/grid-bootstrap.html
+++ b/grid-bootstrap.html
@@ -21,7 +21,7 @@
         <div class="container">
             <div class="row badge-dark text-white p-3 mb-4">Uriel</div>
             <div class="row mb-4">
-                <div class="col-7 border mt-1">
+                <div class="col-md-7 border mt-1">
                     <div class="row mt-4 ml-2 mr-2 bg-secondary text-white p-3">
                         <h2>Title</h2>
                         <p>
@@ -79,23 +79,23 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-sm-5 mt-1">
+                <div class="col-md-5 mt-1">
                     <div class="row ml-2 bg-dark text-white pt-sm-4 pl-lg-4 pr-lg-4">
-                        <img src="assets/image/img1.jpg" alt="" width="405" height="260" />
+                        <img src="assets/image/img1.jpg" class="img-fluid" alt="" width="405" height="260" />
                         <p>
                             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia
                             maiores maxime nisi quo ex praesentium.
                         </p>
                     </div>
                     <div class="row ml-2 bg-dark text-white pl-lg-4 pr-lg-4">
-                        <img src="assets/image/img2.jpg" alt="" width="404" height="260" />
+                        <img src="assets/image/img2.jpg" class="img-fluid" alt="" width="404" height="260" />
                         <p>
                             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia
                             autem eveniet sint cupiditate sunt nesciunt.
                         </p>
                     </div>
                     <div class="row ml-2 bg-dark text-white  pl-lg-4 pr-lg-4 pb-lg-3">
-                        <img src="assets/image/img3.jpg" alt="" width="404" height="260" />
+                        <img src="assets/image/img3.jpg" class="img-fluid" alt="" width="404" height="260" />
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum
                             quos voluptate culpa veritatis enim et fugiat.
@@ -103,24 +103,24 @@
                     </div>
                 </div>
             </div>
-            <div class="row mb-4">
-                <div class="col mr-4">
-                    <img src="assets/image/img1.jpg" alt="..." width="230">
-                </div>
-                <div class="col mr-4">
-                    <img src="assets/image/img1.jpg" alt="..." width="230">
+            <div class="row mb-4 p-md-2">
+                <div class="col">
+                    <img src="assets/image/img1.jpg" class="img-fluid" alt="..." width="230">
                 </div>
                 <div class="col">
-                    <img src="assets/image/img1.jpg" alt="..." width="230">
+                    <img src="assets/image/img1.jpg" class="img-fluid" alt="..." width="230">
                 </div>
                 <div class="col">
-                    <img src="assets/image/img1.jpg" alt="..." width="230">
+                    <img src="assets/image/img1.jpg" class="img-fluid" alt="..." width="230">
                 </div>
                 <div class="col">
-                    <img src="assets/image/img1.jpg" alt="..." width="230">
+                    <img src="assets/image/img1.jpg" class="img-fluid" alt="..." width="230">
+                </div>
+                <div class="col">
+                    <img src="assets/image/img1.jpg" class="img-fluid" alt="..." width="230">
                 </div>
             </div>
-            <div class="row">
+            <div class="row badge-dark text-white p-sm-3">
                 Footer <br7> Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque distinctio, vitae officia
                     rem illo, tenetur fugiat quod molestias itaque officiis ea ad aperiam soluta explicabo laborum
                     facilis totam labore ullam!
