--- a/index.html
+++ b/index.html
@@ -1,46 +1,139 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <!-- <link rel="stylesheet" href="assets/css/bootstrap.min.css"> -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">>
-    <title>bootstrap</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous" />
+
+    <link rel="stylesheet" href="assets/css/styles.css" />
+    <title>Textos bootstrap</title>
 </head>
+
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-primary">
-            <a class="navbar-brand text-white" href="#">Generation</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-          
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                  <a class="nav-link text-white" href="index.html">Inicio <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link text-white" href="#">Galería</a>
-                <li class="nav-item">
-                  <a class="nav-link text-white" href="#" tabindex="-1" aria-disabled="true">Contacto </a>
-                </li>
-              </ul>
+
+    <head>
+        <div class="container">
+            <h1 class="text-center">CSS GRID</h1>
+        </div>
+        <div class="container">
+            <div class="row badge-dark text-white p-3 mb-4">Uriel</div>
+            <div class="row mb-4">
+                <div class="col-md-7 border mt-1">
+                    <div class="row mt-4 ml-2 mr-2 bg-secondary text-white p-3">
+                        <h2>Title</h2>
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                            Consectetur tempore earum modi commodi corporis sapiente iste
+                            vitae reprehenderit repellendus! Accusantium sit amet commodi
+                            odit voluptatum nobis, dolores obcaecati suscipit voluptatibus.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        </p>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                            Blanditiis, qui praesentium laboriosam officiis cum non eveniet
+                            enim accusantium.
+                        </p>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum
+                            recusandae nemo voluptas minima voluptate facere dignissimos
+                            ipsum, ratione.
+                        </p>
+                    </div>
+                    <div class="row mt-1 ml-2 mr-2 bg-secondary text-white p-3">
+                        <h2>Title</h2>
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                            Consectetur tempore earum modi commodi corporis sapiente iste
+                            vitae reprehenderit repellendus! Accusantium sit amet commodi
+                            odit voluptatum nobis, dolores obcaecati suscipit voluptatibus.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        </p>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                            Blanditiis, qui praesentium laboriosam officiis.
+                        </p>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum
+                            recusandae nemo voluptas minima voluptate.
+                        </p>
+                    </div>
+                    <div class="row mt-1 ml-2 mr-2 mb-auto bg-secondary text-white p-3">
+                        <h2>Title</h2>
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                            Consectetur tempore earum modi commodi corporis sapiente iste
+                            vitae reprehenderit repellendus! Accusantium sit amet commodi
+                            odit voluptatum nobis, dolores obcaecati suscipit voluptatibus.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        </p>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                            Blanditiis, qui praesentium laboriosam officiis.
+                        </p>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum
+                            recusandae nemo voluptas minima.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-5 mt-1">
+                    <div class="row ml-2 bg-dark text-white pt-sm-4 pl-lg-4 pr-lg-4">
+                        <img src="assets/image/img1.jpg" class="img-fluid" alt="" width="405" height="260" />
+                        <p>
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia
+                            maiores maxime nisi quo ex praesentium.
+                        </p>
+                    </div>
+                    <div class="row ml-2 bg-dark text-white pl-lg-4 pr-lg-4">
+                        <img src="assets/image/img2.jpg" class="img-fluid" alt="" width="404" height="260" />
+                        <p>
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia
+                            autem eveniet sint cupiditate sunt nesciunt.
+                        </p>
+                    </div>
+                    <div class="row ml-2 bg-dark text-white  pl-lg-4 pr-lg-4 pb-lg-3">
+                        <img src="assets/image/img3.jpg" class="img-fluid" alt="" width="404" height="260" />
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum
+                            quos voluptate culpa veritatis enim et fugiat.
+                        </p>
+                    </div>
+                </div>
             </div>
-          </nav>
-    </header>
-    <main>
-        <div class="jumbotron">
-            <h1 class="display-4">Bienvenidos al Bootcamp de Jaca Full Stack . Generation</h1>
-            <p class="lead">Es es el Bootcamp donde aprenderas las mejores habilidades de forntend y backend.
-                <br/>
-                Durante las 12 semanas que vienen, estarás dsarrollando y practicando mas importantes para ti vida 
-                como desarrollados web. 
-            </p>
-            <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-          </div>
-    </main>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+            <div class="row mb-4 p-md-2">
+                <div class="col">
+                    <img src="assets/image/img1.jpg" class="img-fluid" alt="..." width="230">
+                </div>
+                <div class="col">
+                    <img src="assets/image/img1.jpg" class="img-fluid" alt="..." width="230">
+                </div>
+                <div class="col">
+                    <img src="assets/image/img1.jpg" class="img-fluid" alt="..." width="230">
+                </div>
+                <div class="col">
+                    <img src="assets/image/img1.jpg" class="img-fluid" alt="..." width="230">
+                </div>
+                <div class="col">
+                    <img src="assets/image/img1.jpg" class="img-fluid" alt="..." width="230">
+                </div>
+            </div>
+            <div class="row badge-dark text-white p-sm-3">
+                Footer <br7> Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque distinctio, vitae officia
+                    rem illo, tenetur fugiat quod molestias itaque officiis ea ad aperiam soluta explicabo laborum
+                    facilis totam labore ullam!
+            </div>
+        </div>
+    </head>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
