--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous" />
 
     <link rel="stylesheet" href="assets/css/styles.css" />
-    <title>Textos bootstrap</title>
+    <title>Ejercicios bootstrap</title>
 </head>
 
 <body>
