--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                             recusandae nemo voluptas minima voluptate.
                         </p>
                     </div>
-                    <div class="row mt-1 ml-2 mr-2 mb-auto bg-secondary text-white p-3">
+                    <div class="row mt-1 ml-2 mr-2 mb-4 bg-secondary text-white p-3">
                         <h2>Title</h2>
                         <p>
                             Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -103,21 +103,21 @@
                     </div>
                 </div>
             </div>
-            <div class="row mb-4 p-md-2">
-                <div class="col">
-                    <img src="assets/image/img1.jpg" class="img-fluid" alt="..." width="230">
+            <div class="row mb-3">
+                <div class="col- mr-4 mb-">
+                    <img src="assets/image/img1.jpg" class="img-fluid" alt="..." width="200">
                 </div>
-                <div class="col">
-                    <img src="assets/image/img1.jpg" class="img-fluid" alt="..." width="230">
+                <div class="col- mr-4 mb-2">
+                    <img src="assets/image/img1.jpg" class="img-fluid" alt="..." width="200">
                 </div>
-                <div class="col">
-                    <img src="assets/image/img1.jpg" class="img-fluid" alt="..." width="230">
+                <div class="col- mr-4 mb-2">
+                    <img src="assets/image/img1.jpg" class="img-fluid" alt="..." width="200">
                 </div>
-                <div class="col">
-                    <img src="assets/image/img1.jpg" class="img-fluid" alt="..." width="230">
+                <div class="col- mr-4 mb-2">
+                    <img src="assets/image/img1.jpg" class="img-fluid" alt="..." width="200">
                 </div>
-                <div class="col">
-                    <img src="assets/image/img1.jpg" class="img-fluid" alt="..." width="230">
+                <div class="col- mb-2">
+                    <img src="assets/image/img1.jpg" class="img-fluid" alt="..." width="200">
                 </div>
             </div>
             <div class="row badge-dark text-white p-sm-3">
